# boilerplate-codes

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  postcss.config.js  tailwind.config.js
backend/csharp-dotnet/: DotNetBoilerplate.csproj  Program.cs
backend/go-gin/: go.mod  main.go
backend/java-spring/: pom.xml
backend/node-express/: .env.example  README.md  package.json
backend/node-express/src/: server.ts
backend/node-express/src/models/: User.ts
backend/php-laravel/: composer.json
backend/python-fastapi/: .env.example  README.md  main.py  requirements.txt
backend/ruby-rails/: Gemfile
backend/rust-actix/: Cargo.toml
backend/rust-actix/src/: main.rs
cloud/aws-lambda/: serverless.yml
database/mongodb/: init.js
devops/kubernetes/: deployment.yaml
devops/terraform/: main.tf  variables.tf
docs/: CONTRIBUTING.md
docs/setup-guides/: react-typescript.md
mobile/flutter-starter/: pubspec.yaml
mobile/flutter-starter/lib/: main.dart
mobile/react-native/: package.json
src/: index.css
supabase/migrations/: 20250808103704_steep_star.sql
templates/docker/node-express/: Dockerfile
templates/docker/python-fastapi/: Dockerfile
templates/docker/react-typescript/: Dockerfile
templates/github-actions/: ci-cd.yml
web-development/next-fullstack/: package.json
web-development/react-typescript/: .env.example  README.md  package.json
web-development/react-typescript/src/: App.tsx  main.tsx
web-development/vue-composition/: package.json
web-development/vue-composition/src/: App.vue  main.ts
(+4 files in other folders)
